build: Used compile-testing library (#98)
* build: Used compile-testing library for unit testing