@@ -38,7 +38,13 @@
         <jsr305.version>3.0.2</jsr305.version>
         <junit-jupiter.version>5.9.3</junit-jupiter.version>
         <assertj.version>3.24.2</assertj.version>
+        <compile-testing.version>0.21.0</compile-testing.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
+        <maven-surefire-plugin.argLine>
+            --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+            --add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
+            --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+        </maven-surefire-plugin.argLine>
     </properties>
 
     <dependencies>
@@ -76,6 +82,11 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.testing.compile</groupId>
+            <artifactId>compile-testing</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -134,6 +145,11 @@
                 <artifactId>assertj-core</artifactId>
                 <version>${assertj.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.testing.compile</groupId>
+                <artifactId>compile-testing</artifactId>
+                <version>${compile-testing.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -189,16 +205,9 @@
                             <goal>testCompile</goal>
                         </goals>
                         <configuration>
-                            <compilerArgs>
-                                <arg>-implicit:class</arg>
-                            </compilerArgs>
-                            <annotationProcessorPaths>
-                                <path>
-                                    <groupId>pl.com.labaj</groupId>
-                                    <artifactId>auto-record</artifactId>
-                                    <version>${project.version}</version>
-                                </path>
-                            </annotationProcessorPaths>
+                            <testExcludes>
+                                <exclude>**/pl/com/labaj/autorecord/testcase/**/*</exclude>
+                            </testExcludes>
                         </configuration>
                     </execution>
                 </executions>
@@ -207,13 +216,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <!--suppress MavenModelInspection -->
-                    <argLine>${argLine}</argLine>
+                    <argLine>${maven-surefire-plugin.argLine}</argLine>
                     <reportFormat>plain</reportFormat>
                     <consoleOutputReporter>
                         <disable>true</disable>
                     </consoleOutputReporter>
-                    <statelessTestsetInfoReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporter" />
+                    <statelessTestsetInfoReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporter"/>
                 </configuration>
             </plugin>
             <plugin>
@@ -308,7 +316,12 @@
                 <sonar.host.url>https://sonarcloud.io</sonar.host.url>
                 <sonar.organization>pawellabaj</sonar.organization>
                 <sonar.projectKey>pawellabaj:auto-record</sonar.projectKey>
-                <sonar.coverage.exclusions>src/main/java/pl/com/labaj/autorecord/processor/**/*</sonar.coverage.exclusions>
+                <!--suppress UnresolvedMavenProperty -->
+                <maven-surefire-plugin.argLine>${argLine}
+                    --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+                    --add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
+                    --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+                </maven-surefire-plugin.argLine>
             </properties>
 
             <build>
